--- a/online_exam/index.css
+++ b/online_exam/index.css
@@ -1,20 +1,34 @@
+.sidebar,
+.scrollbar {
+    height: auto;
+    position: fixed;
+    scrollbar-width: thin;
+    float: right;
+    text-align: justify;
+    border-style: solid;
+    width: 28%;
+}
+
 .index {
-    background-color: rgb(33, 237, 132); 
+    width: 70%;
+    background-color: rgb(33, 237, 132);
     border-style: solid;
 }
 
-.radio, .checkbox {
+.radio,
+.checkbox {
     text-align: left;
-    margin-left: 5px;
+    padding-left: 5px;
 }
 
-.radio1, .checkbox1 {
+.radio1,
+.checkbox1 {
     text-align: center;
 }
 
 #time {
     float: right;
     font-size: 20px;
-    margin-right:5px;
-    color: rgb(201, 23, 23);
-  }
+    margin-right: 5px;
+    color: rgb(209, 85, 85);
+}
