--- a/online_exam/index.css
+++ b/online_exam/index.css
@@ -1,17 +1,25 @@
-.sidebar,
-.scrollbar {
+fieldset {
+    width: fit-content;
+
+    
+}
+.sidebar{
+    background-color: rgb(72, 232, 250);
+    border-style: solid;
+    color: rgb(0, 0, 0);
+
     height: auto;
     position: fixed;
-    scrollbar-width: thin;
+    padding: 5px;
+    right: 0;
     float: right;
     text-align: justify;
-    border-style: solid;
     width: 28%;
 }
 
 .index {
     width: 70%;
-    background-color: rgb(33, 237, 132);
+    background-color: rgb(238, 244, 70);
     border-style: solid;
 }
 
@@ -19,11 +27,12 @@
 .checkbox {
     text-align: left;
     padding-left: 5px;
+    
 }
 
 .radio1,
 .checkbox1 {
-    text-align: center;
+    text-align: left;
 }
 
 #time {
