--- a/online_exam/index.css
+++ b/online_exam/index.css
@@ -1,16 +1,16 @@
 fieldset {
-    width: fit-content;
-
-    
+    width: auto;
 }
-.sidebar{
+
+.sidebar {
     background-color: rgb(72, 232, 250);
     border-style: solid;
     color: rgb(0, 0, 0);
 
     height: auto;
     position: fixed;
-    padding: 5px;
+    padding-left: 5px;
+    padding-right: 5px;
     right: 0;
     float: right;
     text-align: justify;
@@ -27,7 +27,6 @@ fieldset {
 .checkbox {
     text-align: left;
     padding-left: 5px;
-    
 }
 
 .radio1,
@@ -36,8 +35,10 @@ fieldset {
 }
 
 #time {
+    text-align: top;
     float: right;
     font-size: 20px;
+    margin-top: 5px;
     margin-right: 5px;
     color: rgb(209, 85, 85);
 }
