--- a/online_exam/index.css
+++ b/online_exam/index.css
@@ -37,8 +37,9 @@ fieldset {
 #time {
     text-align: top;
     float: right;
+    font-weight: bold;
     font-size: 20px;
-    margin-top: 5px;
+    margin-top: 30px;
     margin-right: 5px;
-    color: rgb(209, 85, 85);
+    color: rgb(255, 1, 1);
 }
